--- a/index.html
+++ b/index.html
@@ -9,13 +9,133 @@
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="css/font-awesome-4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/font-awesome-4.6.3/css/font-awesome.min.css">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <!-- Custom JS -->
+	
+<!-- <script src="./papaparse.min.js"></script> --> 
+<!-- <script src="js/cvs_parser.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
+<script src="PapaParse-4.1.2/papaparse.min.js"></script>
+<script>
+
+$(document).ready(function(){
+
+    $("#csv-file").change(handleFileSelect);
+});
+
+
+  var data;
+  var price = [];
+  var bathrooms = [];
+  var bedrooms = [];
+  var square_ft = [];
+
+  // The median values of each category
+  var price_standard;
+  var bathrooms_standard;
+  var bedrooms_standard;
+  var square_ft_standard;
+
+  // handles the uploaded CSV file
+  // TODO: Find a way to keep the file on the server instead 
+  // 	   without having to upload it!
+  function handleFileSelect(evt) {
+    var file = evt.target.files[0];
+    Papa.parse(file, {
+      header: true,
+      dynamicTyping: true,
+      complete: function(data) {
+                
+        // console.log(data); 
+        var data_size = data.data.length;
+
+        var i;
+
+        for(i = 0; i < data_size; i++){
+        	price[i] 	 = data.data[i].price;
+        	bathrooms[i] = data.data[i].bathrooms;
+        	bedrooms[i]  = data.data[i].bedrooms;
+        	square_ft[i] = data.data[i]['square-foot']; // learned something new here
+
+        }
+        findMedian();
+      }
+    });
+  }
+
+ // displaying values for checking if everything is good
+  function findMedian(){
+
+  	 price.sort(function(a, b){return a-b});
+  	 bathrooms.sort(function(a, b){return a-b});
+  	 bedrooms.sort(function(a, b){return a-b});
+  	 square_ft.sort(function(a, b){return a-b});
+
+  	 // set the standards!
+  	 price_standard     = median(price);
+  	 bedrooms_standard  = median(bedrooms);
+  	 bathroom_standard  = median(bathrooms);
+  	 square_ft_standard = median(square_ft);
+
+  	 // debugging - to DELETE
+ 	 console.log("PRICE: " 	     + price_standard);
+  	 console.log("BEDROOMS: "    + bedrooms_standard);
+  	 console.log("BATHROOMS: "   + bathroom_standard);
+  	 console.log("SQUARE-FOOT: " + square_ft_standard);
+
+
+  	 propertyPriceCalculation(price_standard, bedrooms_standard, bathroom_standard, square_ft_standard);
+
+  };
+
+  function propertyPriceCalculation(price,bed,bath,sq){
+  	console.log(price);
+  	console.log(bed);
+  	console.log(bath);
+  	console.log(sq);
+
+  	// add bathroom and bedrooms
+
+
+  	// divide the square-feet by # of ba/br
+
+
+  	// calculate ratio
+
+
+  }
+
+  // adds values to HTML
+  function addToHtml(price1, price2, price3, price4){
+  	$( "#price1" ).append("$" + price1 );
+  	$( "#price2" ).append("$" + price2 );
+  	$( "#price3" ).append("$" + price3 );
+  	$( "#price4" ).append("$" + price4 );
+
+  }
+
+/* Didn't want to reinvent the wheel!
+   CODE Snippet taken from: https://gist.github.com/caseyjustus/1166258 
+*/
+function median(values) {
+
+    values.sort( function(a,b) {return a - b;} );
+    var half = Math.floor(values.length/2);
+    if(values.length % 2)
+        return values[half];
+    else
+        return (values[half-1] + values[half]) / 2.0;
+};
+
+</script>
 
   </head>
   <body>
@@ -34,61 +154,82 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <!-- <li class="active"><a href="#">About</a></li> -->
-             <li><a href="#about">About</a></li>
-        <!--    <li><a href="#contact">Contact</a></li>
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="#">Action</a></li>
-                <li><a href="#">Another action</a></li>
-                <li><a href="#">Something else here</a></li>
-                <li role="separator" class="divider"></li>
-                <li class="dropdown-header">Nav header</li>
-                <li><a href="#">Separated link</a></li>
-                <li><a href="#">One more separated link</a></li> -->
+             <li><a href="#" 
+   data-toggle="modal" 
+   data-target="#about">About</a>
+</li>
               </ul>
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Default</a></li>
-            <li><a href="../navbar-static-top/">Static top</a></li>
-            <li class="active"><a href="./">Fixed top <span class="sr-only">(current)</span></a></li>
+            <li><a href="../navbar/">Github</a></li>
+          
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
 
+
+
     <div class="row" style="margin-top:100px;">
+	
+	<div class="col-lg-12 text-center">
+
+	<i>PRICING</i> determined by property calculation with 1000 properties <br>
+	<br />
+		<p><strong>Casa Maria</strong> - 2bd, 2ba, 1250 square feet: PRICE --&gt; 		 <span id="price1"></span></p>
+		<p><strong>Westwood Towers</strong> - Studio, 1ba, 750 square feet: PRICE --&gt; <span id="price2"></span></p>
+		<p><strong>Bella Fortuna</strong> - 3bd, 1ba, 1500 square feet: PRICE --&gt; 	 <span id="price3"></span></p>
+		<p><strong>Palace Apartments</strong> - 4bd, 2ba, 2250 square feet: PRICE --&gt; <span id="price4"></span></p>
+	</div>		
+	
+
+	<br />
+	<br />
+
+	<div>
+    	<input type="file" id="csv-file" name="files"/>
+    </div>
+
+
 <form id="bookForm" method="post" class="form-horizontal">
     <div class="form-group">
-        <label class="col-xs-1 control-label">Property</label>
-        <div class="col-xs-4">
-            <input type="text" class="form-control" name="book[0].title" placeholder="Title" />
+
+        <div class="col-xs-3 col-xs-offset-1">
+            <input type="text" class="form-control" name="book[0].title" placeholder="Property Name (optional)" />
         </div>
-        <div class="col-xs-4">
-            <input type="text" class="form-control" name="book[0].isbn" placeholder="ISBN" />
+        <div class="col-xs-2">
+            <input type="text" class="form-control" name="book[0].isbn" placeholder="# of bedrooms" />
+        </div>
+        <div class="col-xs-2">
+            <input type="text" class="form-control" name="book[0].isbn" placeholder="# of bathrooms" />
         </div>
         <div class="col-xs-2">
             <input type="text" class="form-control" name="book[0].price" placeholder="Price" />
         </div>
-        <div class="col-xs-1">
+
+        <div class="col-xs-2">
             <button type="button" class="btn btn-default addButton"><i class="fa fa-plus"></i></button>
         </div>
+
     </div>
 
     <!-- The template for adding new field -->
     <div class="form-group hide" id="bookTemplate">
-        <div class="col-xs-4 col-xs-offset-1">
-            <input type="text" class="form-control" name="title" placeholder="Title" />
+        <div class="col-xs-3 col-xs-offset-1">
+            <input type="text" class="form-control" name="title" placeholder="Property Name (optional)" />
         </div>
-        <div class="col-xs-4">
-            <input type="text" class="form-control" name="isbn" placeholder="ISBN" />
+        <div class="col-xs-2">
+            <input type="text" class="form-control" name="isbn" placeholder="# of bedrooms" />
+        </div>
+        <div class="col-xs-2">
+            <input type="text" class="form-control" name="isbn" placeholder="# of bathrooms" />
         </div>
         <div class="col-xs-2">
             <input type="text" class="form-control" name="price" placeholder="Price" />
         </div>
+
         <div class="col-xs-1">
             <button type="button" class="btn btn-default removeButton"><i class="fa fa-minus"></i></button>
         </div>
@@ -96,7 +237,7 @@
 
     <div class="form-group">
         <div class="col-xs-5 col-xs-offset-1">
-            <button type="submit" class="btn btn-default">Submit</button>
+          <button type="button" class="btn btn-default" id="addNewReq" data-toggle='modal' data-target='#results' style="background-color: #71f968;">Submit</button>
         </div>
     </div>
 </form>
@@ -107,8 +248,50 @@
 
     </div>
 
+<!-- RESULTS Modal -->
+ <div class="modal fade" id="results" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
+            <h4 class="modal-title" id="myModalLabel">Property Pricing</h4>
+            </div>
+            <div class="modal-body">
+                <h3>Property Name</h3>
+                <span>Priced Recommenedation:</span><span><strong>$1,000</strong></span>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- ABOUT Modal -->
+ <div class="modal fade" id="about" tabindex="-1" role="dialog" aria-labelledby="basicModal" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&amp;times;</button>
+            <h4 class="modal-title" id="myModalLabel">Property Pricing</h4>
+            </div>
+            <div class="modal-body">
+                <h3>Property Name</h3>
+                <span>Priced Recommenedation:</span><span><strong>$1,000</strong></span>
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+    </div>
+  </div>
+</div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
     <script>
@@ -121,8 +304,19 @@ $(document).ready(function() {
                 }
             }
         },
-        isbnValidators = {
-            row: '.col-xs-4',
+        bedroomValidators = {
+            row: '.col-xs-3',
+            validators: {
+                notEmpty: {
+                    message: 'The ISBN is required'
+                },
+                isbn: {
+                    message: 'The ISBN is not valid'
+                }
+            }
+        },
+           bathroomValidators = {
+            row: '.col-xs-3',
             validators: {
                 notEmpty: {
                     message: 'The ISBN is required'
@@ -133,7 +327,7 @@ $(document).ready(function() {
             }
         },
         priceValidators = {
-            row: '.col-xs-2',
+            row: '.col-xs-3',
             validators: {
                 notEmpty: {
                     message: 'The price is required'
@@ -180,9 +374,9 @@ $(document).ready(function() {
             // Add new fields
             // Note that we also pass the validator rules for new field as the third parameter
             $('#bookForm')
-                .formValidation('addField', 'book[' + bookIndex + '].title', titleValidators)
-                .formValidation('addField', 'book[' + bookIndex + '].isbn', isbnValidators)
-                .formValidation('addField', 'book[' + bookIndex + '].price', priceValidators);
+                // .formValidation('addField', 'book[' + bookIndex + '].title', titleValidators)
+                // .formValidation('addField', 'book[' + bookIndex + '].isbn', isbnValidators)
+                // .formValidation('addField', 'book[' + bookIndex + '].price', priceValidators);
         })
 
         // Remove button click handler
@@ -192,9 +386,9 @@ $(document).ready(function() {
 
             // Remove fields
             $('#bookForm')
-                .formValidation('removeField', $row.find('[name="book[' + index + '].title"]'))
-                .formValidation('removeField', $row.find('[name="book[' + index + '].isbn"]'))
-                .formValidation('removeField', $row.find('[name="book[' + index + '].price"]'));
+                // .formValidation('removeField', $row.find('[name="book[' + index + '].title"]'))
+                // .formValidation('removeField', $row.find('[name="book[' + index + '].isbn"]'))
+                // .formValidation('removeField', $row.find('[name="book[' + index + '].price"]'));
 
             // Remove element containing the fields
             $row.remove();
