--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
     <div class="form-group">
 
         <div class="col-xs-3 col-xs-offset-1">
-            <input type="text" class="form-control" name="property[0].name" placeholder="Property Name (optional)" />
+            <input type="text" class="form-control row-0" name="name" placeholder="Property Name (optional)" />
         </div>
         <div class="col-xs-2">
-            <input type="number" class="form-control" name="property[0].bedrooms" placeholder="# of bedrooms" />
+            <input type="number" class="form-control row-0" name="bedrooms" placeholder="# of bedrooms" />
         </div>
         <div class="col-xs-2">
-            <input type="number" class="form-control" name="property[0].bathrooms" placeholder="# of bathrooms" />
+            <input type="number" class="form-control row-0" name="bathrooms" placeholder="# of bathrooms" />
         </div>
         <div class="col-xs-2">
-            <input type="number" class="form-control" name="property[0].squarefeet" placeholder="# Square ft" />
+            <input type="number" class="form-control row-0" name="squarefeet" placeholder="# Square ft" />
         </div>
 
         <div class="col-xs-2">
